--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>    
             <div class = "game-controls">
                 <button class="btn controls-button" id="restart">Restart</button>
-                <button class="btn controls-button" id="submit-answer">Submit Answer</button>
+                <!-- <button class="btn controls-button" id="submit-answer">Submit Answer</button> -->
                 <button class="btn controls-button" id="next-question">Next Question</button>
             </div>
         </div>
