Adjusting for loop so scoreboard now works! Adding text to confirm correct/incorrect answer.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <h1>Trivial Pursuit: Matt Edition</h1>
         <div class = "game-board">
+            <div id = "result-display"></div>
             <div class = "score">
-                <!-- <span id = "result-display">TRUE</span> -->
                 <span id = "player-score">0</span>
                 <span id="out-of">out of</span>
                 <span id = "total-score">0</span>
@@ -28,7 +28,6 @@
             </div>    
             <div class = "game-controls">
                 <button class="btn controls-button" id="restart">Restart</button>
-                <!-- <button class="btn controls-button" id="submit-answer">Submit Answer</button> -->
                 <button class="btn controls-button" id="next-question">Next Question</button>
             </div>
         </div>
