Adding additional words to the scoreboard for clarity. Adjusted font sizes for responsive design.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <div class = "game-board">
             <div id = "result-display"></div>
             <div class = "score">
+                <span id = "your-score">Your score:</span>
                 <span id = "player-score">0</span>
                 <span id="out-of">out of</span>
                 <span id = "total-score">0</span>
+                <span id = "correct">correct</span>
             </div>
             <div class = "play-area">
                 <div id="question-text">This is where a question will go.</div>
