Adding introductory page with win condition explained.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 </div>    
             </div>    
             <div class = "game-controls">
-                <button class="btn controls-button" id="restart">Restart</button>
+                <button class = "btn controls-button" id="game-start">Start the game</button>
+                <button class="btn controls-button" id="restart">Retry</button>
                 <button class="btn controls-button" id="next-question">Next Question</button>
             </div>
         </div>
