Styled the header and added some additional comments for clarity.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <h1>Trivial Pursuit: Matt Edition</h1>
+    <div class = 'title'><h1>Trivial Pursuit: Matt Edition</h1></div>
         <div class = "game-board">
             <div id = "result-display"></div>
             <div class = "score">
