Working on adding music to the background.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <button class="btn controls-button" id="restart">Retry</button>
                 <button class="btn controls-button" id="next-question">Next Question</button>
             </div>
-        </div>
+    </div>
+    <!-- <embed src="./music.mp3" autostart="true" loop="true"
+        width="2" height="0">
+    </embed> -->
+    <audio src="./music.mp3" autoplay="true" loop="true"></audio>
 </body>
 </html>
