--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
                 <button class="btn controls-button" id="next-question">Next Question</button>
             </div>
     </div>
-    <!-- <embed src="./music.mp3" autostart="true" loop="true"
-        width="2" height="0">
-    </embed> -->
-    <audio src="./music.mp3" autoplay="true" loop="true"></audio>
+    <audio controls autoplay loop src="music.mp3"></audio>
 </body>
 </html>
