Background music added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
                 <button class="btn controls-button" id="next-question">Next Question</button>
             </div>
     </div>
-    
+    <audio id="my-audio" autoplay loop src="https://vgmsite.com/soundtracks/metal-gear-solid-2-sons-of-liberty-original-soundtrack/msjrhrzm/06%20Revolver%20Ocelot.mp3"></audio>
 </body>
 </html>
