--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
     <div class = 'title'><h1>Trivial Pursuit: Matt Edition</h1></div>
         <div class = "game-board">
+            <img id = "music-img" src="./Images/music-note.png" alt="Music Note">
+            <img id = "camera-img" src="./Images/movie-camera.png" alt="Camera">
+            <img id = "basketball-img" src="./Images/basketball.png" alt="Basketball">
+            <img id="book-img" src="./Images/books.png" alt="Books">
+            <img id="car-img" src="./Images/racecar.png" alt="racecar">
+            <img id="television-img" src="./Images/television.png" alt="Television">
+            <img id ="trophy-img" src="./Images/trophy.png" alt="Trophy">
+            <img id="facepalm-img" src="./Images/facepalm.png" alt="Facepalm">
             <div id = "result-display"></div>
             <div class = "score">
                 <span id = "your-score">Your score:</span>
