Updating  renderQuestion function to work properly.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class = 'title'><h1>Trivial Pursuit: Matt Edition</h1></div>
         <div class = "game-board">
+            <div class ="img-container">
             <img id = "music-img" src="./Images/music-note.png" alt="Music Note">
             <img id = "camera-img" src="./Images/movie-camera.png" alt="Camera">
             <img id = "basketball-img" src="./Images/basketball.png" alt="Basketball">
@@ -19,7 +20,9 @@
             <img id="television-img" src="./Images/television.png" alt="Television">
             <img id ="trophy-img" src="./Images/trophy.png" alt="Trophy">
             <img id="facepalm-img" src="./Images/facepalm.png" alt="Facepalm">
+            </div>
             <div id = "result-display"></div>
+        
             <div class = "score">
                 <span id = "your-score">Your score:</span>
                 <span id = "player-score">0</span>
